--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "zk-access-frontend",
+  "name": "zk-coinbase-attestation-frontend",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -14,9 +14,9 @@
     "@noir-lang/noir_js": "^1.0.0-beta.5",
     "@noir-lang/noir_wasm": "^1.0.0-beta.5",
     "@radix-ui/react-slot": "^1.2.2",
+    "@rainbow-me/rainbowkit": "^2.2.7",
+    "@tanstack/react-query": "^5.80.7",
     "@types/lodash": "^4.17.16",
-    "@zk-email/sdk": "^0.0.139",
-    "@zkpassport/sdk": "^0.3.4",
     "axios": "^1.9.0",
     "buffer": "^6.0.3",
     "class-variance-authority": "^0.7.1",
@@ -25,11 +25,14 @@
     "mailparser": "^3.7.2",
     "next": "14.1.0",
     "node-imap": "^0.9.6",
+    "pino-pretty": "^13.0.0",
     "react": "^18",
     "react-dom": "^18",
     "react-qr-code": "^2.0.15",
     "tailwind-merge": "^3.2.0",
     "uuid": "^11.1.0",
+    "viem": "2.30.4",
+    "wagmi": "2.6.5",
     "zustand": "^5.0.4"
   },
   "devDependencies": {
@@ -42,6 +45,9 @@
     "postcss": "^8",
     "tailwindcss": "^3.3.0",
     "typescript": "^5"
+  },
+  "resolutions": {
+    "@noble/hashes": "^1.3.0"
   },
   "packageManager": "yarn@1.22.22+sha512.a6b2f7906b721bba3d67d4aff083df04dad64c399707841b7acf00f6b133b7ac24255f2652fa22ae3534329dc6180534e98d17432037ff6fd140556e2bb3137e"
 }
