--- a/backend/circuit/Nargo.toml
+++ b/backend/circuit/Nargo.toml
@@ -5,3 +5,4 @@ authors = ["LuchoLeonel"]
 
 [dependencies]
 eddsa = { tag = "v0.1.1", git = "https://github.com/noir-lang/eddsa" }
+ecrecover = { tag = "v0.30.0", git = "https://github.com/colinnielsen/ecrecover-noir" }
