--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@coinbase/onchainkit": "^0.38.14",
     "@heroicons/react": "^2.2.0",
     "@metamask/providers": "^22.1.0",
     "@noir-lang/noir_js": "^1.0.0-beta.5",
