--- a/backend/circuit/Nargo.toml
+++ b/backend/circuit/Nargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "zk_coinbase_attestation"
 type = "bin"
-authors = ["LuchoLeonel"]
+authors = ["LuchoLeonel", "fabian416"]
 
 [dependencies]
 eddsa = { tag = "v0.1.1", git = "https://github.com/noir-lang/eddsa" }
