--- a/backend/circuit/Nargo.toml
+++ b/backend/circuit/Nargo.toml
@@ -4,5 +4,5 @@ type = "bin"
 authors = ["LuchoLeonel", "fabian416"]
 
 [dependencies]
-eddsa = { tag = "v0.1.1", git = "https://github.com/noir-lang/eddsa" }
 ecrecover = { tag = "v0.30.0", git = "https://github.com/colinnielsen/ecrecover-noir" }
+keccak256 = { tag = "v0.1.0", git = "https://github.com/noir-lang/keccak256" }
