--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -15,6 +15,8 @@ on:
 jobs:
   build_backend:
     runs-on: ubuntu-latest
+    environment:
+      name: Production
     permissions:
       contents: read
       packages: write
@@ -46,6 +48,8 @@ jobs:
 
   build_frontend:
     runs-on: ubuntu-latest
+    environment:
+      name: Production
     permissions:
       contents: read
       packages: write
@@ -79,3 +83,4 @@ jobs:
           cache-to: type=gha,mode=max
           build-args:
             NEXT_PUBLIC_ENVIRONMENT=${{ env.NEXT_PUBLIC_ENVIRONMENT }}
+            NEXT_PUBLIC_BASE_API_KEY= ${{ secrets.NEXT_PUBLIC_BASE_API_KEY }}
