--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -24,6 +24,7 @@ COPY --from=builder /app/node_modules ./node_modules
 COPY --from=builder /app/tsconfig.json ./
 COPY --from=builder /app/tsconfig.build.json ./
 COPY --from=builder /app/nest-cli.json ./
+COPY --from=builder /app/public ./public
 COPY --from=builder /app/dist ./dist
 
 ENV PORT=5001
