--- a/noir-cookbook/package.json
+++ b/noir-cookbook/package.json
@@ -10,11 +10,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@aztec/bb.js": "^0.63.1",
+    "@aztec/aztec.js": "^0.85.0",
+    "@aztec/bb.js": "0.72.1",
     "@coinbase/onchainkit": "^0.38.14",
     "@monaco-editor/react": "^4.6.0",
-    "@noir-lang/noir_js": "^1.0.0-beta.0",
-    "@noir-lang/noir_wasm": "^1.0.0-beta.0",
+    "@noir-lang/noir_js": "1.0.0-beta.2",
+    "@noir-lang/noir_wasm": "^1.0.0-beta.3",
     "@rainbow-me/rainbowkit": "^2.2.7",
     "ethers": "^6.14.0",
     "@react-three/drei": "^9.122.0",
@@ -32,8 +33,8 @@
     "react-i18next": "^15.2.0",
     "react-scan": "^0.0.54",
     "three": "^0.158.0",
-    "viem": "^2.31.3",
-    "wagmi": "^2.15.6"
+    "viem": "2.30.4",
+    "wagmi": "^2.6.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
