--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -4,26 +4,26 @@ LABEL com.centurylinklabs.watchtower.enable="true"
 
 WORKDIR /app
 
-RUN sed -i 's|http://deb.debian.org|http://deb.debian.org|g' /etc/apt/sources.list \
-  && apt-get update \
-  && apt-get install -y --no-install-recommends python3 make g++ \
-  && rm -rf /var/lib/apt/lists/*
+
+RUN corepack enable \
+    && corepack prepare yarn@3.2.3 --activate \
+    && yarn set version 3.2.3
 
 COPY . .
 
-RUN npm install
+RUN yarn install
 
 ARG VITE_PUBLIC_BASE_API_KEY
 ENV VITE_PUBLIC_BASE_API_KEY=${VITE_PUBLIC_BASE_API_KEY}
 
-RUN npm run build
+RUN yarn build
 
 
 FROM node:22-slim
 
 WORKDIR /app
 
-RUN npm install -g serve
+RUN yarn install -g serve
 
 COPY --from=builder /app/dist ./dist
 
