--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -5,9 +5,12 @@ LABEL com.centurylinklabs.watchtower.enable="true"
 WORKDIR /app
 
 
-RUN corepack enable \
-    && corepack prepare yarn@3.2.3 --activate \
-    && yarn set version 3.2.3
+RUN apt-get update \
+  && apt-get install -y --no-install-recommends python3 make g++ \
+  && apt-get clean && rm -rf /var/lib/apt/lists/* \
+  && corepack enable \
+  && corepack prepare yarn@3.2.3 --activate
+
 
 COPY . .
 
