--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,19 +22,25 @@
     "@react-three/fiber": "^8.18.0",
     "@tailwindcss/vite": "^4.1.10",
     "@tanstack/react-query": "^5.80.7",
+    "@vitejs/plugin-react": "^4.5.2",
+    "buffer": "^6.0.3",
+    "circomlibjs": "^0.1.7",
     "ethers": "^6.14.0",
     "framer-motion": "^12.9.7",
     "gsap": "^3.13.0",
     "i18next": "^24.2.0",
     "i18next-browser-languagedetector": "^8.0.2",
     "lucide-react": "^0.469.0",
+    "process": "^0.11.10",
     "react": "^18.3.1",
     "react-d3-tree": "^3.6.6",
     "react-dom": "^18.3.1",
     "react-i18next": "^15.2.0",
     "react-router-dom": "^7.6.2",
     "react-scan": "^0.0.54",
+    "stream-browserify": "^3.0.0",
     "three": "^0.158.0",
+    "vite-plugin-node-polyfills": "^0.21.0",
     "wagmi": "^2.6.5"
   },
   "devDependencies": {
