--- a/frontend/package.json
+++ b/frontend/package.json
@@ -45,6 +45,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
+    "@types/circomlibjs": "^0.1.6",
     "@types/node": "^22.10.2",
     "@types/react": "^18.3.17",
     "@types/react-dom": "^18.3.5",
