--- a/frontend/package.json
+++ b/frontend/package.json
@@ -27,6 +27,8 @@
     "circomlibjs": "^0.1.7",
     "ethers": "^6.14.0",
     "framer-motion": "^12.9.7",
+    "graphql": "^16.11.0",
+    "graphql-request": "^7.2.0",
     "gsap": "^3.13.0",
     "i18next": "^24.2.0",
     "i18next-browser-languagedetector": "^8.0.2",
