--- a/sdk-demo/Dockerfile
+++ b/sdk-demo/Dockerfile
@@ -1,6 +1,4 @@
-# Etapa 1: Build
 FROM node:22-slim AS builder
-LABEL com.centurylinklabs.watchtower.enable="true"
 
 WORKDIR /app
 
@@ -8,8 +6,8 @@ RUN apt-get update \
   && apt-get install -y --no-install-recommends python3 make g++ \
   && apt-get clean && rm -rf /var/lib/apt/lists/* \
   && corepack enable \
-  && corepack prepare yarn@3.2.3 --activate
-
+  && corepack prepare yarn@3.2.3 --activate \
+  && yarn config set nodeLinker node-modules
 
 COPY . .
 
@@ -29,7 +27,8 @@ RUN apt-get update \
   && apt-get install -y --no-install-recommends python3 make g++ \
   && apt-get clean && rm -rf /var/lib/apt/lists/* \
   && corepack enable \
-  && corepack prepare yarn@3.2.3 --activate
+  && corepack prepare yarn@3.2.3 --activate \
+  && yarn config set nodeLinker node-modules
 
 COPY --from=builder /app/package.json ./
 COPY --from=builder /app/yarn.lock ./
@@ -38,7 +37,6 @@ RUN yarn install
 
 COPY --from=builder /app/dist ./dist
 COPY --from=builder /app/vite.config.ts ./
-
 
 EXPOSE 3001
 
