--- a/sdk-demo/package.json
+++ b/sdk-demo/package.json
@@ -14,7 +14,8 @@
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "tailwindcss": "^4.1.11",
-    "zk-access-coinbase": "^0.1.3"
+    "@aztec/bb.js": "0.72.1",
+    "zk-access-coinbase": "^0.1.10"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
