--- a/sdk/package.json
+++ b/sdk/package.json
@@ -1,6 +1,6 @@
 {
   "name": "zk-access-coinbase",
-  "version": "0.1.3",
+  "version": "0.1.10",
   "main": "./dist/index.js",
   "module": "./dist/index.mjs",
   "types": "./dist/index.d.ts",
@@ -9,7 +9,7 @@
   ],
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "tsup"
+    "build": "vite build"
   },
   "author": "La Banda",
   "license": "ISC",
@@ -17,10 +17,12 @@
   "devDependencies": {
     "ts-node": "^10.9.2",
     "tsup": "^8.5.0",
-    "typescript": "^5.8.3"
+    "typescript": "^5.8.3",
+    "vite": "^6.3.5",
+    "vite-plugin-dts": "^4.5.4"
   },
   "dependencies": {
-    "@aztec/bb.js": "0.84.0",
+    "@aztec/bb.js": "0.72.1",
     "@noir-lang/noir_js": "1.0.0-beta.2"
   }
 }
